debug brand logo display

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,19 +11,19 @@
       </div>
     </div>
 
-    <div class="flex items-center justify-center flex-col p-12">
+    <div class="flex items-center justify-center flex-col p-14">
       <div><%= inline_svg_tag("logos/ads-without-text.svg", class: "h-20 w-20 shrink-0") %></div>
-      <h1 class="text-2xl font-bold tracking-tight text-gray-900 mt-2">Les Artisans du Store</h1>
+      <h1 class="text-3xl font-bold tracking-tight text-gray-900 mt-2">Les Artisans du Store</h1>
     </div>
 
     <div class="flex space-x-10 py-4 px-20">
       <div class="w-2/3 p-8 text-lg text-slate-600">
-        <p class="text-xl font-semibold tracking-tight text-balance text-slate-700 mb-4">Notre Savoir-Faire pour un engagement durable</p>
+        <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700 mb-5">Notre Savoir-Faire pour un engagement durable</p>
         <div class="mb-3">
           Les artisans du store dans le Rhône, c'est plus de 35 ans d'expérience à votre service. Nous proposons toute une gamme de produits pour la fermeture et la protection solaire : stores extérieurs et intérieurs, pergostores, pergolas, moustiquaires, volets roulants et battants, portes de garage.
         </div>
         <div>
-          Qualifiée RGE (Reconnus Garants de l’environnement), Les artisans du store c’est avant tout une équipe de 5 personnes à votre service pour vous conseiller et vous accompagner dans tous vos projets d’aménagement.
+          <strong>Qualifiée RGE</strong> (Reconnus Garants de l’environnement), Les artisans du store c’est avant tout une équipe de 5 personnes à votre service pour vous conseiller et vous accompagner dans tous vos projets d’aménagement.
         </div>
 
       </div>
@@ -38,13 +38,13 @@
       </div>
 
       <div class="w-2/3 p-8 text-lg text-slate-600">
-        <p class="text-xl font-semibold tracking-tight text-balance text-slate-700 mb-4">Nos produits</p>
+        <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700 mb-5">Nos produits</p>
         <div>
           Face à la crise climatique incitant à une meilleure isolation thermique, nous déclinons toute notre gamme de produits qui répondent à ces nouvelles exigences et nous nous efforçons de privilégier les fabricants français, tels que FRANCE FERMETURES, SOMFY, COUBLANC, MATEST, REFLEXOL, DICKSON mais aussi LUXAFLEX pour qui nous assurons le seul Espace Gallery de la région Auvergne-Rhône-Alpes.
         </div>
 
         <div class="h-14 flex items-center mt-3">
-          <%= link_to "Nos produits", categories_path, class: "bg-orange-500 text-white text-center px-3 py-1 rounded hover:bg-orange-600 transition text-[13px] font-semibold" %>
+          <%= link_to "Découvrir nos produits", categories_path, class: "bg-orange-500 text-white text-center px-3 py-1 rounded hover:bg-orange-600 transition text-[13px] font-semibold" %>
         </div>
 
       </div>
