debug svg display 2

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,7 +20,7 @@
       <%= inline_svg_tag("logos/#{@product.motorists.first.logo}", class: "fill-white h-10 w-20 pt-2") %>
     <% end %>
     <% if @product.brand.present? %>
-      <%= inline_svg_tag("logos/#{@product.brand.logo}", class: "text-white fill-white h-14 w-22 pb-4") %>
+      <%= inline_svg_tag("logos/#{@product.brand.logo}", class: "text-white fill-white h-14 w-22") %>
     <% end %>
   </div>
 </div>
