--- a/app/views/pages/destock.html.erb
+++ b/app/views/pages/destock.html.erb
@@ -7,7 +7,7 @@
     <% @products.each do |product| %>
 
       <div class="bg-white rounded-lg border border-slate-100 overflow-hidden flex flex-col">
-        <img src="https://via.placeholder.com/400x300?text=Luxaflex" alt="Coffre intégral C400 de Coublanc" class="w-full h-48 object-cover">
+        <%= cl_image_tag(product.category.products.first.images.first.key, crop: :scale, class: "h-48 w-full object-cover") %>
         <div class="p-8">
           <h2 class="text-md font-bold text-slate-700"><%= product.name %></h2>
           <p class="text-violet-500 text-[12px] font-medium"><%= "Dimensions: #{product.dimensions}" %></p>
