--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -11,7 +11,7 @@
           <%= active_link_to 'Produits', categories_path %>
           <%= active_link_to 'Devis', new_quote_path %>
           <%= active_link_to 'Déstockage', destock_path %>
-          <a href="#" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">Contact</a>
+          <%= active_link_to 'Contact', contact_path %>
         </div>
       </div>
     </div>
@@ -42,6 +42,8 @@
         <%= link_to 'Accueil', root_path, class: "text-gray-700 mobile-nav-item" %>
         <%= link_to 'Produits', categories_path, class: "text-gray-700 mobile-nav-item" %>
         <%= link_to 'Devis', new_quote_path, class: "text-gray-700 mobile-nav-item" %>
+        <%= link_to 'Déstockage', destock_path, class: "text-gray-700 mobile-nav-item" %>
+        <%= link_to 'Contact', contact_path, class: "text-gray-700 mobile-nav-item" %>
       </nav>
     </div>
   </div>
