add manufacturer model + associatons

--- a/app/components/admin/navbar_component.html.erb
+++ b/app/components/admin/navbar_component.html.erb
@@ -29,6 +29,12 @@
               <% end %>
             </li>
             <li>
+              <%= active_link_to admin_manufacturers_path do %>
+                <%= inline_svg_tag("icons/fire.svg", class: "h-6 w-6 shrink-0 text-gray-400")%>
+                Fabricants
+              <% end %>
+            </li>
+            <li>
               <%= active_link_to admin_motorists_path do %>
                 <%= inline_svg_tag("icons/fire.svg", class: "h-6 w-6 shrink-0 text-gray-400")%>
                 Motoristes
