--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,5 @@
-<div class="flex space-x-4 items-start p-16">
-  <div class="border rounded-lg border-gray-100 w-1/2 flex flex-wrap">
+<div class="flex flex-col md:flex-row space-x-4 items-start p-16 min-h-screen">
+  <div class="border rounded-lg border-gray-100 w-full flex flex-wrap flex-col md:flex-row md:w-1/2">
 
     <div class="w-1/2 p-8 border-b border-gray-100">
       <div class="rounded-lg w-10 h-10 flex items-center justify-center bg-orange-50 mb-4">
