--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -37,13 +37,13 @@
       </div>
 
 
-      <div class="w-1/4">
-        <div class="flex items-center space-x-3 border-b h-12 pl-4 border-l">
+      <div class="w-1/4 min-h-full border-l">
+        <div class="flex items-center space-x-3 border-b h-12 pl-4">
           <div class="text-sm font-medium text-slate-700">Motoristes</div>
           <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= @product.motorists.size %></span>
         </div>
 
-        <div class="h-80 border-l">
+        <div class="">
           <div class="flex flex-col">
             <%= f.collection_check_boxes :motorist_ids, Motorist.all, :id, :name do |b| %>
               <div class="checkbox-wrapper w-full relative">
@@ -59,6 +59,29 @@
             <% end %>
           </div>
         </div>
+
+        <div class="flex items-center space-x-3 border-b h-12 pl-4">
+          <div class="text-sm font-medium text-slate-700">Fabricants</div>
+          <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= @product.manufacturers.size %></span>
+        </div>
+
+        <div class="">
+          <div class="flex flex-col">
+            <%= f.collection_check_boxes :manufacturer_ids, Manufacturer.all, :id, :name do |b| %>
+              <div class="checkbox-wrapper w-full relative">
+                <%= b.check_box(class: "peer hidden") %>
+                <%= inline_svg_tag("icons/check-circle.svg", class: "h-4 w-4 shrink-0 mr-2 hidden peer-checked:flex peer-checked:text-violet-600 absolute left-4 top-1/3 transition") %>
+                <%= inline_svg_tag("icons/circle-empty.svg", class: "h-4 w-4 shrink-0 mr-2 peer-checked:hidden absolute left-4 top-1/3 text-gray-300 transition") %>
+                <div class="h-4 w-4 shrink-0 mr-2 peer-checked:hidden absolute left-4 top-1/3"></div>
+                <%= b.label(class: 'cursor-pointer text-xs flex items-center justify-start space-x-2 border-b px-10 py-4 font-bold text-gray-700 peer-checked:bg-violet-50 peer-checked:border-violet-100 peer-checked:text-violet-600') do %>
+                  <%= inline_svg_tag("icons/check-circle.svg", class: "h-4 w-4 shrink-0 mr-2 hidden peer-checked:flex") %>
+                  <div><%= b.text %></div>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+
       </div>
 
       <div class="w-1/4">
