--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,8 +19,8 @@
     <% if @product.motorists.any? %>
       <%= inline_svg_tag("logos/#{@product.motorists.first.logo}", class: "text-white fill-white h-10 w-20 pt-2") %>
     <% end %>
-    <% if @product.brand.present? %>
-      <%= inline_svg_tag("logos/#{@product.brand.logo}", class: "text-white fill-white h-10 w-20") %>
+    <% if @product.manufacturers.any? %>
+      <%= inline_svg_tag("logos/#{@product.manufacturers.first.logo}", class: "text-white fill-white h-10 w-20") %>
     <% end %>
   </div>
 </div>
