adjust quote product view

--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -2,7 +2,7 @@
 
   <div class="flex px-20 w-full flex-col md:flex-row">
     <% if @product %>
-      <div class="w-full md:w-1/2 order-2 ml-10">
+      <div class="w-full md:w-1/2 order-2 bg-gray-50 pt-6">
         <div class="px-6">
           <p class="text-xl font-bold"><%= @product.name %></p>
           <p class="text-[10px] text-violet-500 font-semibold">Catégorie : <%= @product.category.name %></p>
