--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
+<% title "Home page" %>
+<% description "Page principale du site" %>
+<% keywords "Stores, volets roulants" %>
+
 <%= render EventFlashComponent.new(@event) %>
 
 <div class="bg-white">
