--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,7 @@
+<% title "#{@product.name}" %>
+<% description "Page principale du site" %>
+<% keywords "Stores, volets roulants" %>
+
 <%= render BreadcrumbComponent.new(breadcrumbs) %>
 
 <div class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32">
