adjust mobile home page

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <% title "Catégories" %>
-<% description "Toutes les catégories de produit" %>
+<% description "Catégories de produit" %>
 <% keywords "Stores, volets roulants, stores intérieurs" %>
 
 <%= render EventFlashComponent.new(@event) %>
