--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,5 @@
 <% title "#{@category.name}" %>
-<% description "Page principale du site" %>
-<% keywords "Stores, volets roulants" %>
+<% description "Fourniture / Pose de stores , 69 , Rhône-alpes , stores extérieurs et intérieurs, moustiquaires, volets roulants, portes de garages." %>
 
 <div class="w-full min-h-screen flex relative">
   <section class="h-screen w-60 sticky top-16 px-5 py-4 border-r border-gray-100 hidden">
