--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,6 +53,25 @@
       </div>
     </div>
 
+    <div class="flex py-4 px-20 flex-col items-center"
+     data-controller="image-slider"
+     data-image-slider-images-value='["https://res.cloudinary.com/dytbi4y5w/image/upload/v1742218647/production/static/u6i9jfhrr0fvmxm8dxfi.jpg", "https://res.cloudinary.com/dytbi4y5w/image/upload/v1742218647/production/static/u6i9jfhrr0fvmxm8dxfi.jpg"]'>
+      <div class="w-full p-8 text-slate-600 text-center">
+        <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700 mb-1">
+          Showroom
+        </p>
+        <div class="text-slate-400 text-md font-semibold">
+          Venez nous rendre visite dans notre espace Showroom
+        </div>
+      </div>
+      <div class="w-full md:w-1/2 p-8 md:p-0 mb-5">
+        <%= image_tag("https://res.cloudinary.com/dytbi4y5w/image/upload/v1742218647/production/static/u6i9jfhrr0fvmxm8dxfi.jpg",
+          data: { "image-slider-target": "image" },
+          class: "w-full object-cover object-center rounded") %>
+      </div>
+    </div>
+
+
   </main>
 
 
