--- a/app/components/footer_component.html.erb
+++ b/app/components/footer_component.html.erb
@@ -1,25 +1,20 @@
-<footer class="bg-white border-t border-gray-100">
-  <div class="mx-auto max-w-7xl px-6 py-6 md:flex md:items-center md:justify-between lg:px-8">
-    <div class="flex justify-center space-x-6 md:order-2">
-      <a href="#" class="text-gray-400 hover:text-gray-500">
-        <div class="flex items-center space-x-2">
-          <%= inline_svg_tag("icons/phone.svg", class: "h-4 w-4 fill-cyan-400")%>
-          <span class="text-xs font-semibold text-gray-500">04 74 01 05 11</span>
-        </div>
-      </a>
-      <a href="#" class="text-gray-400 hover:text-gray-500">
-        <div class="flex items-center space-x-2">
-          <%= inline_svg_tag("icons/map-pin.svg", class: "h-4 w-4 fill-cyan-400")%>
-          <span class="text-xs font-semibold text-gray-500">35 , Rue des Martinets <b>69210 L'Arbresle</b></span>
-        </div>
-      </a>
+<footer class="bg-white border-t border-gray-100 w-full">
+
+  <div class="w-full flex px-4 justify-between">
+    <div class="flex items-center">
+      <p class="text-xs leading-6 font-medium text-gray-600 text-center">&copy; 2025 Les artisans du store</p>
     </div>
-    <div class="mt-8 md:order-1 md:mt-0 flex items-center space-x-1">
-      <p class="text-xs leading-6 font-bold text-gray-600 text-center">&copy; Lads 2024</p>
-      <p class="text-[10px] leading-6 font-medium text-gray-600 text-center">- Made with</p>
-      <%= inline_svg_tag("icons/heart.svg", class: "h-3 w-3 fill-red-400")%>
-      <p class="text-[10px] leading-6 font-medium text-gray-600 text-center">by</p>
-      <p class="font-semibold text-gray-700 text-[10px] leading-6">Aurélien Galoppe</p>
+
+    <div class="flex justify-center space-x-6">
+      <div class="flex items-center border-x px-3 py-4">
+        <%= link_to "04 74 01 05 11", "tel:0474010511", class: "text-xs text-gray-500 font-medium hover:underline" %>
+      </div>
+
+      <div class="flex items-center">
+        <span class="text-xs font-medium text-gray-500">35 Rue des Martinets 69210 L'Arbresle</span>
+      </div>
     </div>
+
   </div>
+
 </footer>
