--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
 
 
 
- <section aria-labelledby="collections-heading" class="bg-white">
+ <section aria-labelledby="collections-heading" class="bg-white min-h-screen">
   <div class="mx-auto max-w-7xl px-10 sm:px-10 lg:px-10">
     <div class="mx-auto max-w-2xl py-6 sm:py-6 lg:max-w-none lg:py-6">
       <div class="mt-6 space-y-10 gap-y-10 lg:grid lg:grid-cols-4 lg:gap-x-10 lg:space-y-0">
