--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -71,6 +71,37 @@
       </div>
     </div>
 
+    <div class="flex py-4 px-20 flex-col items-center bg-gray-800">
+      <div class="w-full p-8 text-slate-600 text-center">
+        <p class="text-2xl font-semibold tracking-tight text-balance text-gray-100 mb-1">
+          Vaste gamme
+        </p>
+        <div class="text-slate-400 text-md font-semibold">
+          Découvrir tous les types de produit
+        </div>
+      </div>
+      <div class="w-full p-8 pt-0 mb-5 overflow-hidden overflow-x-scroll flex items-center flex-nowrap space-x-6">
+        <% @categories.each do |cat| %>
+
+          <%= link_to category_path(cat) do %>
+          <div class="min-w-48 bg-orange h-48">
+            <div class="w-full h-4/5 rounded-lg border-4 border-gray-600 overflow-hidden hover:border-gray-400 transition">
+              <% if cat.products.first.images.attached? %>
+                <%= cl_image_tag(cat.products.first.images.first.key, crop: :scale, class: "h-full w-full object-cover brightness-75 hover:brightness-100 transition") %>
+              <% else %>
+              <% end %>
+            </div>
+            <div class="h-1/5 text-sm font-medium mt-2 text-gray-300 flex items-center">
+              <div class=""><%= cat.name %></div>
+              <div><%= inline_svg_tag("icons/chevron-right.svg", class: "h-4 w-4 ml-1 text-gray-300") %></div>
+            </div>
+          </div>
+          <% end %>
+
+        <% end %>
+      </div>
+    </div>
+
 
   </main>
 
