add processed to quotes

--- a/app/components/admin/header_component.html.erb
+++ b/app/components/admin/header_component.html.erb
@@ -2,7 +2,7 @@
   <div class="flex items-start space-x-5">
     <div class="pt-1.5">
       <h1 class="text-2xl font-bold text-gray-900"><%= @title %></h1>
-      <p class="text-sm font-medium text-gray-500">Applied for <a href="#" class="text-gray-900">Front End Developer</a> on <time datetime="2020-08-25">August 25, 2020</time></p>
+      <p class="text-xs font-medium text-gray-500">Utilsateur connecté : <small class="text-gray-800 inline font-semibold">agaloppe@me.com</small></p>
     </div>
   </div>
 
