--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,8 +36,14 @@
     </div>
 
     <div class="flex space-x-0 md:space-x-10 bg-slate-100 py-4 px-20 flex-col md:flex-row">
-      <div class="w-full md:w-1/3 p-8">
-        <%= image_tag("https://res.cloudinary.com/dytbi4y5w/image/upload/v1742218647/production/static/kgtp3vvpdgpccd1wgej7.jpg", crop: :scale, class: "w-full object-cover object-center rounded") %>
+      <div class="w-full md:w-1/3 p-8 flex flex-wrap">
+        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/somfy.svg", class: "h-24 w-24 text-gray-400 fill-gray-400") %></div>
+        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-luxaflex.svg", class: "h-24 w-24 text-gray-400") %></div>
+        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/coublanc.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 pb-4") %></div>
+        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-Matest.svg", class: "h-24 w-24 text-gray-400") %></div>
+        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-France-Fermeture.svg", class: "h-24 w-24 text-gray-400 fill-gray-400") %></div>
+        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-REFLEXSOL.svg", class: "h-20 w-20 text-gray-400 fill-gray-400") %></div>
+        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-dickson.svg", class: "h-24 w-24 text-gray-400 fill-gray-400") %></div>
       </div>
 
       <div class="w-full md:w-2/3 p-8 text-lg text-slate-600">
