--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
       <h1 class="text-3xl font-bold tracking-tight text-gray-900 mt-2">Les Artisans du Store</h1>
     </div>
 
-    <div class="flex space-x-0 md:space-x-10 py-4 px-20 flex-col md:flex-row">
+    <div class="flex space-x-0 md:space-x-10 py-4 px-1 md:px-20 flex-col md:flex-row">
       <div class="w-full md:w-2/3 p-8 text-lg text-slate-600">
         <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700 mb-5">Notre Savoir-Faire pour un engagement durable</p>
         <div class="mb-3">
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div class="flex space-x-0 md:space-x-10 bg-slate-100 py-4 px-20 flex-col md:flex-row">
+    <div class="flex space-x-0 md:space-x-10 bg-slate-100 py-4 px-1 md:px-20 flex-col md:flex-row hidden">
       <div class="w-full md:w-1/3 p-8 flex flex-wrap">
         <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/somfy.svg", class: "h-24 w-24 text-gray-400 fill-gray-400") %></div>
         <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-luxaflex.svg", class: "h-24 w-24 text-gray-400") %></div>
@@ -59,7 +59,34 @@
       </div>
     </div>
 
-    <div class="flex py-4 px-20 flex-col items-center"
+
+
+    <div class="flex py-4 px-4 md:px-20 flex-col items-center bg-slate-50">
+      <div class="w-full py-8 text-slate-600 flex flex-col items-center">
+        <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700">
+          Nos produits
+        </p>
+        <div class="text-slate-400 text-sm/7 font-semibold mt-6 w-full md:w-2/3 text-left">
+          Face à la crise climatique incitant à une meilleure isolation thermique, nous déclinons toute notre gamme de produits qui répondent à ces nouvelles exigences et nous nous efforçons de privilégier les fabricants français.
+        </div>
+        <div class="text-slate-400 text-sm/7 font-semibold w-full md:w-2/3 text-left">
+          <p class="font-bold text-slate-500">France fermeture, Somfy, Coublanc, Matest, Reflexsol, Dickson</p> mais aussi Luxaflex pour qui nous assurons le seul Espace Gallery de la région Auvergne-Rhône-Alpes.
+        </div>
+      </div>
+      <div class="w-full md:w-2/3 flex items-center justify-center space-x-2 overflow-hidden overflow-x-scroll">
+        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/somfy.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
+        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-luxaflex.svg", class: "h-24 w-24 text-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
+        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/coublanc.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 pb-4 hover:fill-orange-400 hover:text-orange-400") %></div>
+        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-Matest.svg", class: "h-24 w-24 text-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
+        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-France-Fermeture.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
+        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-REFLEXSOL.svg", class: "h-20 w-20 text-gray-400 fill-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
+        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-dickson.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
+      </div>
+    </div>
+
+
+
+    <div class="flex py-4 px-1 md:px-20 flex-col items-center"
      data-controller="image-slider"
      data-image-slider-images-value='["https://res.cloudinary.com/dytbi4y5w/image/upload/v1742749633/production/static/showroom/lsxjopx01g8oypdwg3bi.jpg", "https://res.cloudinary.com/dytbi4y5w/image/upload/v1742749633/production/static/showroom/rzanvn6kb5wed32g0z3w.jpg"]'>
       <div class="w-full p-8 text-slate-600 text-center">
@@ -77,7 +104,7 @@
       </div>
     </div>
 
-    <div class="flex py-4 px-20 flex-col items-center bg-gray-800">
+    <div class="flex py-4 px-1 md:px-20 flex-col items-center bg-gray-800">
       <div class="w-full p-8 text-slate-600 text-center">
         <p class="text-2xl font-semibold tracking-tight text-balance text-gray-100 mb-1">
           Vaste gamme
