--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,4 +1,4 @@
-<%= render Admin::HeaderComponent.new(title: "Créer un produit de déstockage") %>
+<%= render Admin::HeaderComponent.new(title: "Créer un produit") %>
 
 <%= simple_form_for([:admin, @product], data: {turbo: true}) do |f| %>
   <div class="main">
@@ -19,11 +19,12 @@
             </div>
           </div>
 
+          <%= f.input :description, as: :text, label: "Description", wrapper: :admin_form %>
+          <%= f.input :infos, as: :text, label: "Infos", wrapper: :admin_form %>
+
           <div class="flex space-x-8">
-            <div class="w-1/2">
-              <%= f.input :old_price, label: "Ancien prix", wrapper: :admin_form %>
-              <%= f.input :new_price, label: "Nouveau prix", wrapper: :admin_form %>
-              <%= f.input :dimensions, label: "Dimensions", wrapper: :admin_form %>
+            <div class="w-1/4">
+              <%= f.input :warranty, as: :numeric, label: "Garantie", wrapper: :admin_form %>
             </div>
           </div>
 
@@ -33,13 +34,13 @@
       </div>
 
 
-      <div class="w-1/4">
-        <div class="flex items-center space-x-3 border-b h-12 pl-4 border-l">
+      <div class="w-1/4 min-h-full border-l">
+        <div class="flex items-center space-x-3 border-b h-12 pl-4">
           <div class="text-sm font-medium text-slate-700">Motoristes</div>
           <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= @product.motorists.size %></span>
         </div>
 
-        <div class="h-80 border-l">
+        <div class="">
           <div class="flex flex-col">
             <%= f.collection_check_boxes :motorist_ids, Motorist.all, :id, :name do |b| %>
               <div class="checkbox-wrapper w-full relative">
@@ -55,6 +56,29 @@
             <% end %>
           </div>
         </div>
+
+        <div class="flex items-center space-x-3 border-b h-12 pl-4">
+          <div class="text-sm font-medium text-slate-700">Fabricants</div>
+          <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= @product.manufacturers.size %></span>
+        </div>
+
+        <div class="">
+          <div class="flex flex-col">
+            <%= f.collection_check_boxes :manufacturer_ids, Manufacturer.all, :id, :name do |b| %>
+              <div class="checkbox-wrapper w-full relative">
+                <%= b.check_box(class: "peer hidden") %>
+                <%= inline_svg_tag("icons/check-circle.svg", class: "h-4 w-4 shrink-0 mr-2 hidden peer-checked:flex peer-checked:text-violet-600 absolute left-4 top-1/3 transition") %>
+                <%= inline_svg_tag("icons/circle-empty.svg", class: "h-4 w-4 shrink-0 mr-2 peer-checked:hidden absolute left-4 top-1/3 text-gray-300 transition") %>
+                <div class="h-4 w-4 shrink-0 mr-2 peer-checked:hidden absolute left-4 top-1/3"></div>
+                <%= b.label(class: 'cursor-pointer text-xs flex items-center justify-start space-x-2 border-b px-10 py-4 font-bold text-gray-700 peer-checked:bg-violet-50 peer-checked:border-violet-100 peer-checked:text-violet-600') do %>
+                  <%= inline_svg_tag("icons/check-circle.svg", class: "h-4 w-4 shrink-0 mr-2 hidden peer-checked:flex") %>
+                  <div><%= b.text %></div>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+
       </div>
 
       <div class="w-1/4">
@@ -82,7 +106,6 @@
     </div>
 
     <% if @product.images.attached? %>
-
       <div class="border-t">
         <div class="flex space-x-3 items-center px-4 py-3">
           <div class="text-sm font-medium text-slate-700">Photos</div>
@@ -142,9 +165,6 @@
         </div>
 
       </div>
-
-
-
     <% else %>
       <div class="border-t">
         <div class="text-sm font-medium text-slate-700 my-4">Photos</div>
@@ -185,24 +205,123 @@
       </div>
     <% end %>
 
+    <% if @product.documentations.attached? %>
+      <div class="border-t">
+        <div class="flex space-x-3 items-center px-4 py-3">
+          <div class="text-sm font-medium text-slate-700">Documentations</div>
+          <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{@product.documentations.size} Documentations" %></span>
+        </div>
+
+        <div class="flex border-t">
+
+          <ul role="list" class="p-12 w-3/4 grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-6 xl:gap-x-8">
+            <% @product.documentations.each do |doc| %>
+              <li class="relative" data-controller="image" data-image-signed-id-value="<%= doc.signed_id %>">
+                <%= f.hidden_field :documentations, multiple: true, value: doc.signed_id, data: { image_target: "hiddenField" } %>
+                <div class="group overflow-hidden rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 focus-within:ring-offset-gray-100">
+                  <%= cl_image_tag(doc.key, crop: :scale, class: "pointer-events-none aspect-[10/7] object-cover group-hover:opacity-75") %>
+                </div>
+                <div class="mt-2">
+                  <p class="pointer-events-none truncate text-ellipsis text-[9px] font-semibold text-gray-900 border-b mb-2 pb-2 border-gray-100"><%= doc.blob.filename %></p>
+
+                  <div class="flex justify-between items-center">
+                    <span class="inline-flex items-center rounded-md bg-purple-50 px-1.5 py-0.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{(doc.blob.byte_size.to_f / 1000000.0).round(1)} MB" %></span>
+                    <!-- Bouton de suppression -->
+                    <%= link_to "#", data: {action: "image#remove", turbo: false} do %>
+                      <div class="flex space-x-3 items-center">
+                        <%= inline_svg_tag("icons/trash.svg", class: "h-4 w-4 shrink-0 text-gray-600")%>
+                      </div>
+                    <% end %>
+                  </div>
+
+                </div>
+              </li>
+            <% end %>
+          </ul>
+
+          <div class="w-1/4 border-l flex flex-col items-center">
+
+            <div data-controller="docupload" class="w-full">
+              <!-- Champ de fichier pour télécharger l'image -->
+              <%= f.file_field :documentations, direct_upload: true, multiple: true, data: { docupload_target: "input", action: "change->docupload#uploadFile" }, style: "display: none;" %>
+
+              <%= link_to "#", class: "text-blue-600 text-sm font-bold", data: { action: "docupload#triggerFileInput" } do %>
+                <div class="p-6 w-full flex flex-col items-center">
+                  <div class="relative w-full flex flex-col items-center rounded-lg border-2 border-dashed border-gray-200 p-12 text-center hover:border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                    <%= inline_svg_tag("icons/cube-transparent.svg", class: "h-10 w-10 text-violet-300")%>
+                    <span class="mt-2 block text-[11px] font-semibold text-slate-500">Ajoutez des documentations</span>
+                  </div>
+                  <small class="text-[8px] font-semibold text-center text-slate-400 mt-1">Sauvegardez le produit pour enregister les documentations</small>
+                </div>
+              <% end %>
+
+              <div data-docupload-target="preview" class="flex flex-col w-full items-center">
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    <% else %>
+      <div class="border-t">
+        <div class="text-sm font-medium text-slate-700 my-4">Documentations</div>
+
+        <div class="flex border-t">
+
+          <div class="w-3/4 p-12">
+
+            <div class="text-center flex flex-col items-center">
+              <%= inline_svg_tag("icons/exclamation-circle.svg", class: "h-6 w-6 shrink-0 text-red-500") %>
+              <h3 class="mt-2 text-sm font-semibold text-gray-900">0 Documentations</h3>
+              <p class="mt-1 text-xs font-medium text-gray-400">Ajoutez des documentations dans le menu à droite</p>
+            </div>
+
+          </div>
+
+          <div class="w-1/4 border-l flex flex-col items-center">
+
+            <div data-controller="docupload" class="w-full">
+              <!-- Champ de fichier pour télécharger l'image -->
+              <%= f.file_field :documentations, direct_upload: true, multiple: true, data: { docupload_target: "input", action: "change->docupload#uploadFile" }, style: "display: none;" %>
+
+              <%= link_to "#", class: "text-blue-600 text-sm font-bold", data: { action: "docupload#triggerFileInput" } do %>
+                <div class="bg-indigo-50 px-2 py-2 border-b border-indigo-100 text-xs font-semibold text-indigo-600 hover:bg-indigo-100 flex items-center w-full">
+                  <%= inline_svg_tag("icons/queue-list.svg", class: "h-3 w-3 shrink-0 text-indigo-500")%>
+                  <div class="ml-2">Add documentations</div>
+                </div>
+              <% end %>
+
+              <div data-docupload-target="preview" class="flex flex-col w-full items-center p-6"></div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    <% end %>
+
 
   </div>
 
 
   <div class="flex">
 
+    <% if @product.options.any? %>
     <div class="options w-3/4">
-      <% if @product.persisted? %>
-        <div class="flex items-center space-x-3 border-y h-12 pl-4 border-r">
-          <div class="text-sm font-medium text-slate-700">Options</div>
-          <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{@product.options.size} Options" %></span>
-          <%= link_to admin_destock_product_options_path(@product), data: { turbo_method: :post, turbo_stream: true } do %>
-            <div class="flex space-x-2 items-center">
-              <div class="text-xs text-gray-500 font-medium px-2 py-1 rounded border border-gray-200 hover:bg-gray-100">+ Ajouter</div>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
+      <div class="flex items-center space-x-3 border-y h-12 pl-4 border-r">
+        <div class="text-sm font-medium text-slate-700">Options</div>
+        <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{@product.options.size} Options" %></span>
+        <%= link_to admin_product_options_path(@product), data: { turbo_method: :post, turbo_stream: true } do %>
+          <div class="flex space-x-2 items-center">
+            <div class="text-xs text-gray-500 font-medium px-2 py-1 rounded border border-gray-200 hover:bg-gray-100">+ Ajouter</div>
+          </div>
+        <% end %>
+      </div>
 
 
       <% if @product.options.any? %>
@@ -229,7 +348,7 @@
                 <div class="flex shrink-0 items-center gap-x-4">
                   <%= inline_svg_tag("icons/dragging.svg", class: "h-4 w-4 shrink-0 text-gray-600")%>
 
-                  <%= link_to admin_destock_product_option_path(@product, option), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure ?', turbo_stream: true }, remote: true do %>
+                  <%= link_to admin_product_option_path(@product, option), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure ?', turbo_stream: true }, remote: true do %>
                     <div class="flex space-x-3 items-center">
                       <%= inline_svg_tag("icons/minus-circle.svg", class: "h-4 w-4 shrink-0 text-red-500") %>
                     </div>
@@ -251,6 +370,7 @@
       <% end %>
 
     </div>
+    <% end %>
 
     <div class="service w-1/4">
       <div class="flex items-center space-x-3 border-y h-12 pl-4">
@@ -368,7 +488,7 @@
 
   <div class="fixed bottom-5 right-0 w-10/12 flex items-center justify-end pr-8">
     <div class="px-5 py-3 border border-gray-100 rounded bg-white shadow-lg flex space-x-5 items-center shadow-violet-200/50">
-      <div class="text-[10px] font-medium text-violet-400">Retour</div>
+      <%= link_to "Retour", admin_root_path, class: "text-[10px] font-medium text-violet-400" %>
       <%= f.button :submit, "Enregistrer" %>
       <%= render 'admin/products/notification', notice: nil %>
     </div>
