--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,141 +2,7 @@
 <% description "Fourniture / Pose de stores , 69 , Rhône-alpes , stores extérieurs et intérieurs, moustiquaires, volets roulants, portes de garages." %>
 
 <%= render EventFlashComponent.new(@event) %>
+<%= render HomeMainHeroComponent.new(@categories) %>
 
 <div class="bg-white">
-  <main>
-    <!-- Hero -->
-    <div class="flex border-b border-gray-200 h-[500px] hidden">
-      <div class="w-full h-full">
-        <% if @carousel_products.any? %>
-          <%= render CarouselComponent.new(@carousel_products) %>
-        <% end %>
-      </div>
-    </div>
-
-    <div class="flex items-center justify-center flex-col p-14">
-      <div><%= inline_svg_tag("logos/ads-without-text.svg", class: "h-20 w-20 shrink-0") %></div>
-      <h1 class="text-3xl font-bold tracking-tight text-gray-900 mt-2">Les Artisans du Store</h1>
-    </div>
-
-    <div class="flex space-x-0 md:space-x-10 py-4 px-1 md:px-20 flex-col md:flex-row">
-      <div class="w-full md:w-2/3 p-8 text-lg text-slate-600">
-        <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700 mb-5">Notre Savoir-Faire pour un engagement durable</p>
-        <div class="mb-3">
-          Les artisans du store dans le Rhône, c'est plus de 35 ans d'expérience à votre service. Nous proposons toute une gamme de produits pour la fermeture et la protection solaire : stores extérieurs et intérieurs, pergostores, pergolas, moustiquaires, volets roulants et battants, portes de garage.
-        </div>
-        <div>
-          <strong>Qualifiée RGE</strong> (Reconnus Garants de l’environnement), Les artisans du store c’est avant tout une équipe de 5 personnes à votre service pour vous conseiller et vous accompagner dans tous vos projets d’aménagement.
-        </div>
-
-      </div>
-      <div class="w-full md:w-1/3 p-8">
-        <%= image_tag("https://res.cloudinary.com/dytbi4y5w/image/upload/v1742218647/production/static/u6i9jfhrr0fvmxm8dxfi.jpg", crop: :scale, class: "w-full object-cover object-center rounded") %>
-      </div>
-    </div>
-
-    <div class="flex space-x-0 md:space-x-10 bg-slate-100 py-4 px-1 md:px-20 flex-col md:flex-row hidden">
-      <div class="w-full md:w-1/3 p-8 flex flex-wrap">
-        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/somfy.svg", class: "h-24 w-24 text-gray-400 fill-gray-400") %></div>
-        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-luxaflex.svg", class: "h-24 w-24 text-gray-400") %></div>
-        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/coublanc.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 pb-4") %></div>
-        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-Matest.svg", class: "h-24 w-24 text-gray-400") %></div>
-        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-France-Fermeture.svg", class: "h-24 w-24 text-gray-400 fill-gray-400") %></div>
-        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-REFLEXSOL.svg", class: "h-20 w-20 text-gray-400 fill-gray-400") %></div>
-        <div class="w-1/2 flex items-center justify-center"><%= inline_svg_tag("logos/logo-dickson.svg", class: "h-24 w-24 text-gray-400 fill-gray-400") %></div>
-      </div>
-
-      <div class="w-full md:w-2/3 p-8 text-lg text-slate-600">
-        <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700 mb-5">Nos produits</p>
-        <div>
-          Face à la crise climatique incitant à une meilleure isolation thermique, nous déclinons toute notre gamme de produits qui répondent à ces nouvelles exigences et nous nous efforçons de privilégier les fabricants français, tels que FRANCE FERMETURES, SOMFY, COUBLANC, MATEST, REFLEXOL, DICKSON mais aussi LUXAFLEX pour qui nous assurons le seul Espace Gallery de la région Auvergne-Rhône-Alpes.
-        </div>
-
-        <div class="h-14 flex items-center mt-3">
-          <%= link_to "Découvrir nos produits", categories_path, class: "bg-orange-500 text-white text-center px-3 py-1 rounded hover:bg-orange-600 transition text-[13px] font-semibold" %>
-        </div>
-
-      </div>
-    </div>
-
-
-
-    <div class="flex py-4 px-4 md:px-20 flex-col items-center bg-slate-50">
-      <div class="w-full py-8 text-slate-600 flex flex-col items-center">
-        <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700">
-          Nos produits
-        </p>
-        <div class="text-slate-400 text-sm/7 font-semibold mt-6 w-full md:w-2/3 text-left">
-          Face à la crise climatique incitant à une meilleure isolation thermique, nous déclinons toute notre gamme de produits qui répondent à ces nouvelles exigences et nous nous efforçons de privilégier les fabricants français.
-        </div>
-        <div class="text-slate-400 text-sm/7 font-semibold w-full md:w-2/3 text-left">
-          <p class="font-bold text-slate-500">France fermeture, Somfy, Coublanc, Matest, Reflexsol, Dickson</p> mais aussi Luxaflex pour qui nous assurons le seul Espace Gallery de la région Auvergne-Rhône-Alpes.
-        </div>
-      </div>
-      <div class="w-full md:w-2/3 flex items-center justify-center space-x-2 overflow-hidden overflow-x-scroll">
-        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/somfy.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
-        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-luxaflex.svg", class: "h-24 w-24 text-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
-        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/coublanc.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 pb-4 hover:fill-orange-400 hover:text-orange-400") %></div>
-        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-Matest.svg", class: "h-24 w-24 text-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
-        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-France-Fermeture.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
-        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-REFLEXSOL.svg", class: "h-20 w-20 text-gray-400 fill-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
-        <div class="min-w-32 flex items-center justify-center"><%= inline_svg_tag("logos/logo-dickson.svg", class: "h-24 w-24 text-gray-400 fill-gray-400 hover:fill-orange-400 hover:text-orange-400") %></div>
-      </div>
-    </div>
-
-
-
-    <div class="flex py-4 px-1 md:px-20 flex-col items-center"
-     data-controller="image-slider"
-     data-image-slider-images-value='["https://res.cloudinary.com/dytbi4y5w/image/upload/v1742749633/production/static/showroom/lsxjopx01g8oypdwg3bi.jpg", "https://res.cloudinary.com/dytbi4y5w/image/upload/v1742749633/production/static/showroom/rzanvn6kb5wed32g0z3w.jpg"]'>
-      <div class="w-full p-8 text-slate-600 text-center">
-        <p class="text-2xl font-semibold tracking-tight text-balance text-slate-700 mb-1">
-          Showroom
-        </p>
-        <div class="text-slate-400 text-md font-semibold">
-          Venez nous rendre visite dans notre espace Showroom
-        </div>
-      </div>
-      <div class="w-full md:w-1/2 p-8 md:p-0 mb-5">
-        <%= image_tag("https://res.cloudinary.com/dytbi4y5w/image/upload/v1742749633/production/static/showroom/lsxjopx01g8oypdwg3bi.jpg",
-          data: { "image-slider-target": "image" },
-          class: "w-full object-cover object-center rounded") %>
-      </div>
-    </div>
-
-    <div class="flex py-4 px-1 md:px-20 flex-col items-center bg-gray-800">
-      <div class="w-full p-8 text-slate-600 text-center">
-        <p class="text-2xl font-semibold tracking-tight text-balance text-gray-100 mb-1">
-          Vaste gamme
-        </p>
-        <div class="text-slate-400 text-md font-semibold">
-          Découvrir tous les types de produit
-        </div>
-      </div>
-      <div class="w-full p-8 pt-0 mb-5 overflow-hidden overflow-x-scroll flex items-center flex-nowrap space-x-6">
-        <% @categories.each do |cat| %>
-
-          <%= link_to category_path(cat) do %>
-          <div class="min-w-48 bg-orange h-48">
-            <div class="w-full h-4/5 rounded-lg border-4 border-gray-600 overflow-hidden hover:border-gray-400 transition">
-              <% if cat.products.first.images.attached? %>
-                <%= cl_image_tag(cat.products.first.images.first.key, crop: :scale, class: "h-full w-full object-cover brightness-75 hover:brightness-100 transition") %>
-              <% else %>
-              <% end %>
-            </div>
-            <div class="h-1/5 text-sm font-medium mt-2 text-gray-300 flex items-center">
-              <div class=""><%= cat.name %></div>
-              <div><%= inline_svg_tag("icons/chevron-right.svg", class: "h-4 w-4 ml-1 text-gray-300") %></div>
-            </div>
-          </div>
-          <% end %>
-
-        <% end %>
-      </div>
-    </div>
-
-
-  </main>
-
-
 </div>
