--- a/app/components/home_main_hero_component.html.erb
+++ b/app/components/home_main_hero_component.html.erb
@@ -6,16 +6,16 @@
       <div class="p-8 md:p-12 flex flex-col justify-center">
 
         <div class="flex items-center gap-4">
-          <div><%= inline_svg_tag("logos/ads-without-text.svg", class: "h-14 w-14 shrink-0") %></div>
+          <div><%= inline_svg_tag("logos/ads-without-text.svg", class: "h-12 w-12 shrink-0") %></div>
           <h1 class="text-5xl md:text-4xl font-extrabold leading-tight text-slate-900">
             Les Artisans du Store
           </h1>
         </div>
 
-        <div class="mt-6 mb-3 text-slate-600 max-w-prose text-lg">
+        <div class="mt-6 mb-3 text-slate-800 max-w-prose text-lg">
           Les artisans du store dans le Rhône, c'est plus de 35 ans d'expérience à votre service. Nous proposons toute une gamme de produits pour la fermeture et la protection solaire : stores extérieurs et intérieurs, pergostores, pergolas, moustiquaires, volets roulants et battants, portes de garage.
         </div>
-        <div class="text-slate-600 max-w-prose text-lg">
+        <div class="text-slate-800 max-w-prose text-lg">
           <strong>Qualifiée RGE</strong> (Reconnus Garants de l’environnement), Les artisans du store c’est avant tout une équipe de 5 personnes à votre service pour vous conseiller et vous accompagner dans tous vos projets d’aménagement.
         </div>
 
@@ -232,7 +232,7 @@ Un grand merci à toute l'équipe.”</blockquote>
   <section id="grid" class="variant">
     <div class="mt-20 mb-12 rounded-3xl border border-slate-200 p-8">
       <div class="flex flex-col items-center text-center">
-        <p class="text-2xl md:text-3xl font-semibold tracking-tight text-slate-800">Nos partenaires</p>
+        <p class="text-xl md:text-2xl font-bold">Nos partenaires</p>
         <p class="mt-3 max-w-2xl text-slate-600">Un écosystème de marques techniques et durables. Passez au showroom pour manipuler moteurs, toiles et finitions.</p>
       </div>
       <div class="mt-8 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-6 gap-6 items-center">
