change images paths

--- a/app/components/home_main_hero_component.html.erb
+++ b/app/components/home_main_hero_component.html.erb
@@ -59,7 +59,7 @@
           data-hero-rotator-target="slide"
           class="absolute inset-0 h-full w-full transition-opacity duration-700 ease-in-out group"
           aria-hidden="false">
-          <%= image_tag "Magasin 01",
+          <%= image_tag "magasin-01.jpeg",
                 alt: "Pergola bioclimatique moderne",
                 class: "absolute inset-0 h-full w-full object-cover",
                 decoding: "async", loading: "eager" %>
@@ -73,7 +73,7 @@
           data-hero-rotator-target="slide"
           class="absolute inset-0 h-full w-full opacity-0 pointer-events-none transition-opacity duration-700 ease-in-out group"
           aria-hidden="true">
-          <%= image_tag "Magasin 02",
+          <%= image_tag "magasin-02.jpeg",
                 alt: "Store banne motorisé",
                 class: "absolute inset-0 h-full w-full object-cover",
                 decoding: "async", loading: "lazy" %>
@@ -87,7 +87,7 @@
           data-hero-rotator-target="slide"
           class="absolute inset-0 h-full w-full opacity-0 pointer-events-none transition-opacity duration-700 ease-in-out group"
           aria-hidden="true">
-          <%= image_tag "Magasin 03",
+          <%= image_tag "magasin-03.jpeg",
                 alt: "Menuiseries aluminium noires",
                 class: "absolute inset-0 h-full w-full object-cover",
                 decoding: "async", loading: "lazy" %>
@@ -101,7 +101,7 @@
           data-hero-rotator-target="slide"
           class="absolute inset-0 h-full w-full opacity-0 pointer-events-none transition-opacity duration-700 ease-in-out group"
           aria-hidden="true">
-          <%= image_tag "Magasin 04",
+          <%= image_tag "magasin-04.jpeg",
                 alt: "Menuiseries aluminium noires",
                 class: "absolute inset-0 h-full w-full object-cover",
                 decoding: "async", loading: "lazy" %>
@@ -115,7 +115,7 @@
           data-hero-rotator-target="slide"
           class="absolute inset-0 h-full w-full opacity-0 pointer-events-none transition-opacity duration-700 ease-in-out group"
           aria-hidden="true">
-          <%= image_tag "Magasin 05",
+          <%= image_tag "magasin-05.jpeg",
                 alt: "Menuiseries aluminium noires",
                 class: "absolute inset-0 h-full w-full object-cover",
                 decoding: "async", loading: "lazy" %>
